# icar

src/config/: config.json
src/include/: common.hpp  uart.hpp
src/src/: controlcenter.cpp  detection.cpp  icar.cpp  motion.cpp  preprocess.cpp
src/src/detection/: bridge.cpp  catering.cpp  crosswalk.cpp  layby.cpp  obstacle.cpp  parking.cpp
src/src/recognition/: crossroad.cpp  ring.cpp  trackig.cpp  tracking.cpp
src/tool/: camera.cpp  img2video.cpp
test/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  config.json  main  uart.hpp
test/src/: CMakeLists.txt
test/src/include/: uart.hpp
test/src/src/: test.cpp
